[metadata]
name = compwa-actions
description = Python scripts used by the ComPWA/actions repository
author = Common Partial Wave Analysis
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
author_email = compwa-admin@ep1.rub.de
license = License :: OSI Approved :: MIT License
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7

[options.extras_require]
format =
    black
lint =
    ruff
sty =
    %(format)s
    %(lint)s
    pre-commit
dev =
    %(sty)s
